--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 		<title>
 			Home | Rahab
 		<title>
-		
+		<link href="src/styles/generic.css" rel="stylesheet" type="text/css">
 	</head>
 	<body>
 	</body>
