--- a/full.html
+++ b/full.html
@@ -14,7 +14,7 @@
     <script>
       var id = window.location.pathname.searchParams.get("id");
       var script = document.createElement('script');
-      script.src = "sketch" + id + ".js";
+      script.src = "src/sketches/sketch" + id + ".js";
     </script>
   </body>
 </html>
