--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 	<head>
 		<title>
 			Home | Rahab
-		<title>
+		</title>
 		<link href="src/styles/generic.css" rel="stylesheet" type="text/css">
 	</head>
 	<body>
