--- a/index.html
+++ b/index.html
@@ -6,5 +6,8 @@
 		<link href="src/styles/generic.css" rel="stylesheet" type="text/css">
 	</head>
 	<body>
+		<a href="full.html?id=1">
+			Go to first sketch
+		</a>
 	</body>
 </html>
