--- a/full.html
+++ b/full.html
@@ -11,10 +11,6 @@
     </title>
   </head>
   <body>
-    <script>
-      var id = window.location.pathname.searchParams.get("id");
-      var script = document.createElement('script');
-      script.src = "src/sketches/sketch" + id + ".js";
-    </script>
+    <script src="src/sketches/sketch1.html"></script>
   </body>
 </html>
