--- a/full.html
+++ b/full.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+  	<base href="https://rahabvis.github.io/">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.3/p5.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.3/addons/p5.dom.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.3/addons/p5.sound.min.js"></script>
@@ -11,6 +12,6 @@
     </title>
   </head>
   <body>
-    <script src="src/sketches/sketch1.html"></script>
+    <script src="src/sketches/sketch1.js"></script>
   </body>
 </html>
