--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         	</header>
         	<br>
 		<div class="sketch" onclick="window.location='full?id=1';">
-          		<img src="src/img/sketch1thumb.png" alt="Circles upon circles thumbnail">
+          		<img src="src/img/thumb1.png" alt="Circles upon circles thumbnail">
           		<br>
             		<span class=spacing><br></span>
             		<span>
@@ -58,7 +58,7 @@
         	</div>
         	<br>
         	<div class="sketch" onclick="window.location='full?id=2';">
-          		<img src="src/img/sketch2thumb.png" alt="Spinning triangles thumbnail">
+          		<img src="src/img/thumb2.png" alt="Spinning triangles thumbnail">
           		<br>
             		<span class=spacing><br></span>
             		<span>
